# nook_os

./: .gitignore  Cargo.toml  Makefile  README.md
Documentation/: chap00_setup_dev_environment.md
docs/: chap00_setup_dev_environment.md  chap01_run_primary_entry_with_wait_for_event_forever.md
src/: kernel.rs  main.rs
src/arch/aarch64/kernel/: head.S  head.rs  kernel.ld
src/arch/arm64/kernel/: head.S  kernel.ld
